# OvenTemp

./: .gitignore  LICENSE  README.md
OvenTemp_Arduino/: OvenTemp_Arduino.ino
STM32F446/: OvenTemp.ioc
STM32F446/OvenTemp/: .clang_complete  .mxproject  Makefile  OvenTemp.ioc  STM32F446RETx_FLASH.ld  copy_bin.sh
STM32F446/OvenTemp/Inc/: LEDBackpack.h  common.h  display.h  hardware.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  thermocouple.h
STM32F446/OvenTemp/Src/: LEDBackpack.c  display.c  hardware.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  system_stm32f4xx.c  thermocouple.c
STM32F446/docs/: Doxyfile
STM32F446/scripts/: gdb_startup.py  stm32f4discovery.cfg
docs/: arduino_noOpt_maxBright.csv  arduino_noOpt_minBright.csv
docs/power/: STMpower_active_5ohms_noLEDs.csv  STMpower_active_5ohms_noLEDs.numbers  STMpower_idle_5ohms_noLEDs.csv  STMpower_idle_5ohms_noLEDs.numbers  arduino_powerDownTherm_minBright.csv
docs/power/uCurrent Measurements (mV:mA)/: Active_uCurrent_mVmA.csv  DotOn_uCurrent_mVmA.csv  Idle_uCurrent_mVmA.csv  PowerCalculations.numbers
firmware/: .clang_complete
firmware/compiler/: CMakeLists.txt  build
firmware/drivers/: README.md
firmware/include/: common.h
firmware/source/: main.c
